# egocentric-action-baselines

./: .gitignore  CITATION.cff  DATA_CARD.md  DATA_NOTICE.md  EVALUATION_CARD.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: sample.yaml
docs/: concepts.md  index.html
docs/assets/: walkthrough.webm
docs/v0.1.0/: index.html
notebooks/: 01_action_baseline_walkthrough.ipynb
outputs/dino_ablation/: summary.json
outputs/sample_ablation/: episode_discovery.json  summary.json
outputs/split_comparison/chronological/: summary.json
outputs/split_comparison/stratified/: summary.json
reports/: action_baseline_report.md
scripts/: discover_xperience_samples.py  render_action_visuals.py  run_ablation.py
src/: adapters.py  ego_action_baselines.py  ego_action_baselines_cli.py
tests/: test_core.py
